# aoe2-rating-overlay

./: .gitignore  CHANGELOG.md  COPYING.md  GLOSSARY.md  README.md  build.py
api/: aoe2net.json  data-sources.json  data-sources.yml
api-handler/: data-sources.json  test.json
api-handler/aoe2map/: aoe2map.yaml
api-handler/aoe2net/: aoe2net.json
api-handler/api-design/: config.json
api-handler/wikipedia/: wikipedia.json
api/aoe2map/: aoe2map.json
api/aoe2net/: aoe2net.json  aoe2net.yaml
api/aoe2recs/: introspectionSchema.json  schema.graphql
api/aoestats/: aoestats.yml
api/api-design/: config.json
api/wikipedia/: wikipedia.yaml
app/: overlay-api.yaml  package.json
app/src/: App.vue
backend/: run.py
client/app-python-gtk/: TODO  build.py  requirements.txt  setup.py  show-overlay.py
client/app-python-gtk/overlay/: main.py
client/app-python-gtk/ui/: main.glade
client/app-rust/: Cargo.toml  build.rs  cli.yml
client/app-rust/src/: main.rs
docs/: BASE-API.md  Meta-Templating.dia  USER-API.md  feature-list.txt  instructions.md
docs/analysis/OOA/: Requirements.md
docs/design/: Requirements.md  architecture.dia
docs/draft/VISUALISATION/: Meta-Templating-Engine.drawio
server/: requirements.txt  run.py
templates/: overlay.html  overlay.html.tpl  overlay.svg.tpl
templating-meta/: NOTES.md  requirements.txt  sample-template-config.json  setup.cfg  setup.py  test-requirements.txt
templating-meta/meta-templating-engine/: __main__.py  config_parse.py
templating-meta/test/: test_config_parser.py
(+24 files in other folders)
